--- a/VismaWeather/VismaWeather/Views/MainPageView.xaml
+++ b/VismaWeather/VismaWeather/Views/MainPageView.xaml
@@ -7,7 +7,7 @@
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
             <Label Text="Weather App" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        
+        <Picker ItemsSource="{Binding Provinces}" Title="Select a province" ItemDisplayBinding="{Binding NOMBRE_PROVINCIA}"/>
     </StackLayout>
 
 </ContentPage>
