Icons added and Activity Indicator

--- a/VismaWeather/VismaWeather/Views/MainPageView.xaml
+++ b/VismaWeather/VismaWeather/Views/MainPageView.xaml
@@ -54,6 +54,9 @@
                 </FormattedString>
             </Label.FormattedText>
         </Label>
+        <Image IsVisible="{Binding Ready}" Source="{Binding WeatherStateIcon}"/>
+        <ActivityIndicator VerticalOptions="CenterAndExpand" IsRunning="{Binding IsBusy}"/>
+
 
     </StackLayout>
 
